Modified the table header to center in the window

--- a/src/styles/grid.module.css
+++ b/src/styles/grid.module.css
@@ -5,6 +5,19 @@
   vertical-align: top;
 }
 
+.tableHeader {
+  display: flex;
+  width: 100%;
+}
+
+.tableHeader .name {
+  width: 25%;
+}
+
+.tableHeader .columnName {
+  width: 75%;
+}
+
 .header {
   composes: cell;
   font-weight: normal;
